Build Firebase modular auth dashboard with user-scoped Firestore posts

--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,14 @@
 {
   "hosting": {
-    "public": "."
+    "public": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "cleanUrls": true
+  },
+  "firestore": {
+    "rules": "firestore.rules"
   }
 }
