Update Firebase rewrite to serve dashboard at /dashboard/

--- a/firebase.json
+++ b/firebase.json
@@ -8,11 +8,7 @@
     ],
     "rewrites": [
       {
-        "source": "/dashboard",
-        "destination": "/dashboard/dashboard.html"
-      },
-      {
-        "source": "/dashboard/",
+        "source": "/dashboard/**",
         "destination": "/dashboard/dashboard.html"
       }
     ]
